# jibaiGPT-

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
design/drafts/: README.md
design/ui/: README.md
docs/superpowers/specs/: 2026-07-15-frameless-runtime-design.md
scripts/: capture-ui.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_server.rs  lib.rs  main.rs  usage.rs
src-tauri/tests/fixtures/: account-chatgpt-plus.json  rate-limits-multi.json  token-usage.json
src/hooks/: useCodexUsage.ts
src/lib/: usage.ts
