[package]
name = "hexu-codex-usage"
version = "0.1.0"
description = "禾序 · Codex 用量助手"
authors = ["沐青禾"]
license = "MIT"
repository = "https://github.com/A2225211273/jibaiGPT-"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hexu_codex_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
